# src/controllers/user-controller.ts
@@ -2,13 +2,30 @@ import { Request, Response, NextFunction } from 'express';
 import userService from '../services/user-service';
 import {
   createUserSchema,
+  updateProfileSchema,
   updateUserSchema,
 } from '../utils/schemas/user-schema';
+import { v2 as cloudinary, UploadApiResponse } from 'cloudinary';
 
 class userController {
   async getUsers(req: Request, res: Response, next: NextFunction) {
     try {
       const users = await userService.getUser();
+      res.send(users);
+    } catch (error) {
+      next(error);
+    }
+  }
+  async getUserSearch(req: Request, res: Response, next: NextFunction) {
+    try {
+      const search = req.query.search as string;
+
+      if (!search.trim()) {
+        res.json([]);
+        return;
+      }
+
+      const users = await userService.getUserSearch(search);
       res.send(users);
     } catch (error) {
       next(error);
@@ -28,6 +45,17 @@ class userController {
     try {
       const { id } = req.params;
       const user = await userService.getUserById(id);
+      res.json(user);
+    } catch (error) {
+      next(error);
+    }
+  }
+  async getUserByUsername(req: Request, res: Response, next: NextFunction) {
+    try {
+      const { username } = req.params;
+      console.log('Received username:', username);
+      const user = await userService.getUserByUsername(username);
+
       res.json(user);
     } catch (error) {
       next(error);
@@ -65,6 +93,68 @@ class userController {
       }
       const updatedUser = await userService.updateUserById(id, user);
       res.json(updatedUser);
+    } catch (error) {
+      next(error);
+    }
+  }
+  async updateprofileByUserId(req: Request, res: Response, next: NextFunction) {
+    /*  #swagger.requestBody = {
+    required: true,
+    content: {
+        "multipart/form-data": {
+            schema: {
+                $ref: "#/components/schemas/UpdateUserProfileDTO"
+            }  
+        }
+    }
+} 
+*/
+    console.log(req.body, 'ini body');
+    try {
+      const { userId } = req.params;
+      let avatarUploadResult: UploadApiResponse = {} as UploadApiResponse;
+      let bannerUploadResult: UploadApiResponse = {} as UploadApiResponse;
+      const profile = await userService.getProfileByUserId(userId);
+      if (!profile) {
+        res.status(404).json({
+          message: 'user not found',
+        });
+        return;
+      }
+      interface MulterFiles {
+        avatarUrl?: Express.Multer.File[];
+        bannerUrl?: Express.Multer.File[];
+      }
+
+      console.log('Uploaded files:', req.files);
+
+      const files = req.files as MulterFiles;
+
+      if (files.avatarUrl && files.avatarUrl.length > 0) {
+        avatarUploadResult = await cloudinary.uploader.upload(
+          files.avatarUrl[0].path,
+        );
+      }
+
+      if (files.bannerUrl && files.bannerUrl.length > 0) {
+        bannerUploadResult = await cloudinary.uploader.upload(
+          files.bannerUrl[0].path,
+        );
+      }
+      const body = {
+        ...req.body,
+        avatarUrl:
+          avatarUploadResult?.secure_url ?? profile.avatarUrl ?? undefined,
+        bannerUrl:
+          bannerUploadResult?.secure_url ?? profile.bannerUrl ?? undefined,
+      };
+
+      const validatedData = await updateProfileSchema.validateAsync(body);
+      const updatedProfile = await userService.updateProfileByUserId(
+        profile.id,
+        validatedData,
+      );
+      res.json(updatedProfile);
     } catch (error) {
       next(error);
     }
