# src/utils/schemas/user-schema.ts
@@ -1,5 +1,5 @@
 import joi from 'joi';
-import { CreateUserDTO } from '../../dtos/user-dtos';
+import { CreateUserDTO, UpdateUserProfileDTO } from '../../dtos/user-dtos';
 
 import { Profile } from '@prisma/client';
 
@@ -14,5 +14,12 @@ const updateUserSchema = joi.object<CreateUserDTO>({
   email: joi.string().email(),
   username: joi.string().min(2),
 });
+const updateProfileSchema = joi.object<UpdateUserProfileDTO>({
+  fullname: joi.string(),
+  username: joi.string().min(2),
+  bio: joi.string(),
+  avatarUrl: joi.string().optional(),
+  bannerUrl: joi.string().optional(),
+});
 
-export { createUserSchema, updateUserSchema };
+export { createUserSchema, updateUserSchema, updateProfileSchema };
